--- a/branches.mdx
+++ b/branches.mdx
@@ -14,7 +14,7 @@ When working in a branch users have a number of useful capabilities, including:
 
 - Chalk can automatically watch your files and deploy any changes
 - Updates to your project are deployed in seconds
-- Adjust and create features and resolvers inside a JupyterNotebook
+- Adjust and create features and resolvers inside a Jupyter notebook
 - Quickly `recompute` datasets to see the effects of changes
 - Branches have a consistent name across deployments
 
@@ -90,7 +90,7 @@ shape: (786, 3)
 └───────────────┴──────────────┴─────────────────────────┘
 ```
 
-In our jupyter notebook, we can execute this in a cell to setup our notebook to point to our branch, then update our branch with the new feature and resolver.
+In our Jupyter notebook, we can execute this in a cell to set up our notebook to point to our branch, then update our branch with the new feature and resolver.
 
 ```python
 client = ChalkClient(branch="<our_branch>")
