--- a/feature-types.mdx
+++ b/feature-types.mdx
@@ -84,7 +84,7 @@ class Book:
 
 ### Pydantic models
 
-Pydantic models can also be used for stucts.
+Pydantic models can also be used for structs.
 
 ```python
 from pydantic import BaseModel, constr
