--- a/fraud-tutorial.mdx
+++ b/fraud-tutorial.mdx
@@ -516,7 +516,7 @@ The `source` key (`-- source: postgres`) tells Chalk which [integration](/docs/i
 Other comments in the SQL file resolver are indexed by Chalk and can be searched in the [Chalk dashboard](https://chalk.ai/projects).
 In the example resolver above, the comment `get users from postgres` becomes the description of the resolver in the dashboard.
 
-Lets also add our `get_accounts`  and `get_transactions` SQL file resolvers:
+Let's also add our `get_accounts`  and `get_transactions` SQL file resolvers:
 
 ```sql src/get_accounts.chalk.sql
 -- get accounts from postgres.
@@ -579,7 +579,7 @@ Added Features
   Would you like to deploy?  [y/n]
 ```
 
-If you accept, chalk will build and deploy you're new code. Once that's done, you can start querying your date in realtime!
+If you accept, chalk will build and deploy your new code. Once that's done, you can start querying your data in realtime!
 
 ---
 
