--- a/generic.mdx
+++ b/generic.mdx
@@ -33,7 +33,7 @@ def initialize():
 
 This function has access to all
 [environment variables](/docs/env-vars)
-configured for you environment.
+configured for your environment.
 Then, in your [resolver](/docs/resolver-overview),
 you can use the `vendor_client`
 knowing it has been correctly initialized.
