--- a/notebook-development.mdx
+++ b/notebook-development.mdx
@@ -191,7 +191,7 @@ Any historical dataset can be accessed using the `ChalkClient`. Named datasets c
 ```python notebook.ipynb
 client = ChalkClient()
 
-dataset = client.get_dataset(name="<datset_name>")
+dataset = client.get_dataset(name="<dataset_name>")
 ```
 
 ## Building Out More Complex Features
