--- a/runs.mdx
+++ b/runs.mdx
@@ -129,7 +129,7 @@ curl -XPOST -H "Authorization: Bearer $(chalk token)" \
 ### Example
 
 ```bash
-curI -H "Authorization: Bearer $(chalk token)" \
+curl -H "Authorization: Bearer $(chalk token)" \
      -H "X-Chalk-Env-Id: <your-environment-id>" \
      https://api.chalk.ai/v1/runs/{run_id}
 ```
