--- a/metricexport.mdx
+++ b/metricexport.mdx
@@ -70,7 +70,7 @@ Provides information about the time it takes to execute an online query.
 
 <SubAttributeTable title={'Tags'}>
   <SubAttribute field={'id'} kind={'String'}>
-    The name of the query, for example, <code>eligbility_query_v2</code>. Queries without names are
+    The name of the query, for example, <code>eligibility_query_v2</code>. Queries without names are
     labeled "Unnamed"
   </SubAttribute>
   <SubAttribute field={'quantile'} kind={'0.5 | 0.75 | 0.95 | 0.99'}>
