--- a/named-query.mdx
+++ b/named-query.mdx
@@ -181,7 +181,7 @@ ad-hoc query caching enabled, you can cache the sketch of your most frequent que
 the queries in code.
 
 To fully cache query plans, you can use the Durable Plan Cache. With the Durable Plan Cache, your query plans
-are serialized adn stored in a cache that persists across pods and deployments. Then, whenever a new pod
+are serialized and stored in a cache that persists across pods and deployments. Then, whenever a new pod
 spins up, you can configure the number of entries to pre-load into the pod cache from the Durable Plan Cache.
 You can configure the Durable Plan Cache with the following environment variables:
 
@@ -197,4 +197,3 @@ pods using either `CHALK_PREPOPULATE_DURABLE_PLAN_CACHE=k` which will load the t
 duration of `now - timedelta`. Generally, the plans will stay consistent across pods and deployments, but if
 there are any changes in serialization / deserialization schemes between platform versions, then Chalk will still
 plan the named and ad-hoc queries and cache the new plans.
-
