--- a/enterprise-support.mdx
+++ b/enterprise-support.mdx
@@ -1,42 +1,64 @@
 ---
 title: Support
 metaTitle: Support
-metaDescription: How to get support from Chalk
-description: How to get support from Chalk
+metaDescription: Get in touch with our support team!
+description: Get in touch with our support team!
+enterpriseFeature: true
 published: true
 ---
 
+Our documentation is designed to be as comprehensive and easy to understand as possible. In addition, we have a
+team of Support Engineers and Forward Deployed Engineers who are available to answer customer questions and
+help to troubleshoot any issues that arise. All Chalk customers have channels of communication available with
+them to get in touch with our support team and file tickets. Finally, the Chalk on-call engineering team
+does have a 24/7 paging system and alerting configured for customer environments to ensure that we are able to
+respond and mitigate issues in a timely manner. We ask that customers also configure alerting and paging accordingly
+such that the Chalk team can be most effective in responding to and mitigating these potential issues.
+
+There are two levels of support available to customers: Standard Support and Enterprise Support. All customers
+have access to Standard Support, which enables customers to contact the Chalk team, and create support tickets.
+The Chalk team is distributed across multiple time zones, and so strives to respond to all tickets and messages
+in a timely fashion.
+
 ## Standard Support
 
-All customers can create support tickets through Slack by starting a new thread and adding the 🎫 ticket reaction.
-Our team responds to tickets during standard business hours (Monday-Friday, 9 AM - 5 PM PST).
-
----
+Customers can create support tickets by starting a new thread and adding the 🎫 ticket reaction. Our team monitors
+all tickets and will respond in a timely manner. If you have an urgent issue, please ensure to highlight the urgency
+of the issue in the ticket and our team will prioritize accordingly. All customers can also view the status of their
+tickets through the Pylon Customer Portal.
 
 ## Enterprise Support
 
-We provide additional production support for plans on Enterprise Support. This allows paging our on-call engineers 24/7
-via pagerduty for any outage.
+In addition to our timely and friendly support provided for all customers, we also have an Enterprise Support plan
+that customers can choose to include in their bundles. This allows for a 24/7 line to page our on-call engineer
+for urgent issues that require immediate attention.
 
-### Paging via the dashboard
+Enterprise support customers are provided with three ways to page our on-call engineering team, outlined below.
+Our on-call rotation is staffed 24/7 year-round. We ask that customers provide context about the issue or incident
+when paging our on-call team so that we can respond as effectively as possible.
 
-Paging via the dashboard can be achieved by clicking your username at the bottom left, then escalate issue.
-A modal will open that allows you to provide more information regarding the incident.
+
+### 1. Paging via the dashboard
+
+To page via the dashboard, click your username at the bottom left hand corner of the dashboard in the menu bar,
+then click `Escalate Issue`. This will lead to a modal that enables you to provide more information about the incident.
 
 <img src="/img/escalate-issue-button.png" alt="Escalate Issue Button" style={{ width: '300px', margin: '0 auto' }} />
 
-### Paging via Slack
+### 2. Paging via Slack
 
-If a ticket is created via Slack by adding the ticket reaction, a message will appear with
-an option to select the priority.
+Enteprise support customers can also page our on-call engeinering team via Slack by adding the 🎫 ticket reaction
+to a message, marking the ticket as urgent, and then selecting the option to page our on-call team.
+
+The urgency option looks like this:
 
 <img src="/img/priority-form.png" alt="Priority Form" style={{ width: '300px', margin: '0 auto' }} />
 
-If Urgent is selected in the previous message, another option appears with the ability to page us.
+This option to page our on-call will open another modal that allows you to provide more information about the incident:
 
 <img src="/img/page-form.png" alt="Page Form" style={{ width: '300px', display: 'block', margin: '0 auto' }} />
 
-### Paging via email
+### 3. Paging via email
 
 Enterprise support customers are given an emergency email address. Each message sent to this address immediately
 pages our on-call engineering team.
