--- a/faq.mdx
+++ b/faq.mdx
@@ -153,23 +153,16 @@ if need "customer" and "business" features for a transaction fraud model, you mi
 ```py
 @features
 class AuthQuery:
+    # A unique ID that represents this interaction; may be randomly generated if you have
+    # no natural ID in your system.
     id: str
-    """
-    A unique ID that represents this interaction; may be randomly generated if you have
-    no natural ID in your system.
-    """
 
-    customer_id: str
-    customer: Customer = has_one(lambda: Customer.id == AuthQuery.customer_id)
-    """
-    A reference to the relevant customer.
-    """
-
-    business_id: str
-    business: Business = has_one(lambda: Business.id == AuthQuery.business_id)
-    """
-    A reference to the relevant business.
-    """
+    # A reference to the relevant customer.
+    customer_id: "Customer.id"
+    customer: Customer
+    # A reference to the relevant business.
+    business_id: "Business.id"
+    business: Business
 ```
 
 Then, queries can be submitted using:
@@ -177,9 +170,14 @@ Then, queries can be submitted using:
 ```py
 ChalkClient().query(
     input={
-        AuthQuery.id: ..., AuthQuery.customer_id: ..., AuthQuery.business_id: ...
+        AuthQuery.id: ...,
+        AuthQuery.customer_id: ...,
+        AuthQuery.business_id: ...,
     },
-    output=[AuthQuery.customer, AuthQuery.business]
+    output=[
+        AuthQuery.customer, 
+        AuthQuery.business,
+    ]
 )
 ```
 
