--- a/security.mdx
+++ b/security.mdx
@@ -31,7 +31,7 @@ Chalk was built to help answer the world’s hardest questions. By
 democratizing access to machine learning, we hope to do just that.
 
 Chalk was founded and is based in San Francisco, with our primary office
-in the Mission District.
+at 55 Stockton in San Francisco.
 
 ---
 
