--- a/chalksql/what-is-chalk-sql.mdx
+++ b/chalksql/what-is-chalk-sql.mdx
@@ -74,7 +74,7 @@ SELECT * FROM "chalk.online_store.keys";
 ```
 
 You can learn more about available catalogs, schemas, and tables via the
-[Database Explorer](/chalksql/sql-explorer#Database Explorer),
+[Database Explorer](/docs/chalksql/sql-explorer#database-explorer),
 or by making queries to Chalk's `INFORMATION_SCHEMA`.
 
 ```sql
@@ -92,17 +92,16 @@ setup.
 Chalk SQL is primarily run in two different contexts:
 
 - Ad-hoc Chalk SQL queries stand alone and are useful for introspection or workflows that aren't directly adjacent
-to the main query path. These can be run via the [CLI](/cli?command=sql), via the Python
-SDK's [GRPC Client](/api-docs#ChalkGRPCClient.run_sql), or via the [SQL Explorer](/chalksql/sql-explorer), Chalk's
+to the main query path. These can be run via the CLI, via the Python
+SDK's [GRPC Client](/api-docs#ChalkGRPCClient.run_sql), or via the [SQL Explorer](/docs/chalksql/sql-explorer), Chalk's
 built-in SQL console on the dashboard.
 
 - Chalk SQL can be used as a replacement to the `inputs` field in online and offline query. Learn more about using
-Chalk SQL as inputs to traditional chalk queries [here]((/chalksql/sql-as-input)).
+Chalk SQL as inputs to traditional chalk queries [here](/docs/chalksql/sql-as-input).
 
 
 
 ## Further Readings
-- [Example workflows](/chalksql/example-workflows)
-- [Chalk Catalog Components](/chalksql/chalk-catalog-components)
-- [Chalk SQL as query inputs](/chalksql/sql-as-input)
-
+- [Example workflows](/docs/chalksql/example-workflows)
+- [Chalk Catalog Components](/docs/chalksql/chalk-catalog-components)
+- [Chalk SQL as query inputs](/docs/chalksql/sql-as-input)
