--- a/named-query.mdx
+++ b/named-query.mdx
@@ -188,7 +188,7 @@ You can configure the Durable Plan Cache with the following environment variable
 ```bash
 CHALK_PERSIST_DURABLE_PLAN_CACHE=true
 CHALK_PREPOPULATE_DURABLE_PLAN_CACHE=10
-CHALK_PREPOPULATE_DURABLE_PLAN_CACHE_DURATION=timedelta(days=3)
+CHALK_PREPOPULATE_DURABLE_PLAN_CACHE_DURATION=3d
 ```
 
 `CHALK_PERSIST_DURABLE_PLAN_CACHE` enables the Durable Plan Cache. Then, you can choose how to load query plans on new
