change datasets docs

--- a/datasets.mdx
+++ b/datasets.mdx
@@ -194,8 +194,8 @@ As datasets accumulate revisions over time, you can archive older or buggy revis
 To archive a revision:
 1. From the **Datasets** page under the `Offline` section in the sidebar, click on a dataset to open its detail page
 2. Select the **Revisions** tab
-3. Click the **Archive** button in the table row for the revision you want to archive
-4. Confirm the action in the dialog
+3. Select the checkboxes next to all revisions you want to archive
+4. An **Archive** button will appear in the actions bar at the top of the page. Click this button and confirm the action in the dialog.
 
 To view archived revisions, check the **Include archived revisions** checkbox above the revisions table.
 
