--- a/enterprise-support.mdx
+++ b/enterprise-support.mdx
@@ -10,9 +10,9 @@ published: true
 Our documentation is designed to be as comprehensive and easy to understand as possible. In addition, we have a
 team of Support Engineers and Forward Deployed Engineers who are available to answer customer questions and
 help to troubleshoot any issues that arise. All Chalk customers have channels of communication available with
-them to get in touch with our support team and file tickets. Finally, the Chalk on-call engineering team
+them to get in touch with our production support team and file tickets. Finally, the Chalk on-call engineering team
 does have a 24/7 paging system and alerting configured for customer environments to ensure that we are able to
-respond and mitigate issues in a timely manner. We ask that customers also configure alerting and paging accordingly
+respond and resolve outages in a timely manner. We ask that customers also configure alerting and paging accordingly
 such that the Chalk team can be most effective in responding to and mitigating these potential issues.
 
 There are two levels of support available to customers: Standard Support and Enterprise Support. All customers
@@ -22,20 +22,21 @@ in a timely fashion.
 
 ## Standard Support
 
-Customers can create support tickets by starting a new thread and adding the 🎫 ticket reaction. Our team monitors
-all tickets and will respond in a timely manner. If you have an urgent issue, please ensure to highlight the urgency
+Customers can create support tickets by starting a new thread and adding the 🎫 ticket reaction. Our
+production support team monitors all tickets and will respond in a timely manner. If you have an urgent issue or need
+support with an outage, please ensure to highlight the urgency
 of the issue in the ticket and our team will prioritize accordingly. All customers can also view the status of their
 tickets through the Pylon Customer Portal.
 
 ## Enterprise Support
 
 In addition to our timely and friendly support provided for all customers, we also have an Enterprise Support plan
-that customers can choose to include in their bundles. This allows for a 24/7 line to page our on-call engineer
+that customers can choose to include in their bundles. This allows for a 24/7 Pagerduty line to page our on-call engineer
 for urgent issues that require immediate attention.
 
 Enterprise support customers are provided with three ways to page our on-call engineering team, outlined below.
 Our on-call rotation is staffed 24/7 year-round. We ask that customers provide context about the issue or incident
-when paging our on-call team so that we can respond as effectively as possible.
+when paging our on-call team so that we can respond as effectively as possible, especially in case of outages.
 
 
 ### 1. Paging via the dashboard
@@ -47,7 +48,7 @@ then click `Escalate Issue`. This will lead to a modal that enables you to provi
 
 ### 2. Paging via Slack
 
-Enteprise support customers can also page our on-call engeinering team via Slack by adding the 🎫 ticket reaction
+Enteprise support customers can also page our on-call engineering team via Slack by adding the 🎫 ticket reaction
 to a message, marking the ticket as urgent, and then selecting the option to page our on-call team.
 
 The urgency option looks like this:
